--- a/package.json
+++ b/package.json
@@ -2,31 +2,30 @@
   "name": "@taro/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~18.2.0",
-    "@angular/common": "~18.2.0",
-    "@angular/compiler": "~18.2.0",
-    "@angular/core": "~18.2.0",
-    "@angular/forms": "~18.2.0",
-    "@angular/platform-browser": "~18.2.0",
-    "@angular/platform-browser-dynamic": "~18.2.0",
-    "@angular/platform-server": "~18.2.0",
-    "@angular/router": "~18.2.0",
-    "@angular/ssr": "~18.2.0",
-    "express": "~4.18.2",
-    "rxjs": "~7.8.0",
-    "zone.js": "~0.14.3"
+  "author": {
+    "name": "Aleksandr Serenko",
+    "email": "fafnur@yandex.ru",
+    "url": "https://fafn.ru"
   },
+  "private": true,
   "devDependencies": {
-    "@angular-devkit/build-angular": "~18.2.0",
-    "@angular-devkit/core": "~18.2.0",
-    "@angular-devkit/schematics": "~18.2.0",
-    "@angular/cli": "~18.2.0",
-    "@angular/compiler-cli": "~18.2.0",
-    "@angular/language-service": "~18.2.0",
-    "@eslint/js": "^9.8.0",
+    "@angular-devkit/build-angular": "19.0.2",
+    "@angular-devkit/core": "19.0.2",
+    "@angular-devkit/schematics": "19.0.2",
+    "@angular/animations": "19.0.1",
+    "@angular/cli": "19.0.2",
+    "@angular/common": "19.0.1",
+    "@angular/compiler": "19.0.1",
+    "@angular/compiler-cli": "19.0.1",
+    "@angular/core": "19.0.1",
+    "@angular/forms": "19.0.1",
+    "@angular/language-service": "19.0.1",
+    "@angular/platform-browser": "19.0.1",
+    "@angular/platform-browser-dynamic": "19.0.1",
+    "@angular/platform-server": "19.0.1",
+    "@angular/router": "19.0.1",
+    "@angular/ssr": "19.0.2",
+    "@eslint/js": "^9.15.0",
     "@nx/angular": "20.1.4",
     "@nx/eslint": "20.1.4",
     "@nx/eslint-plugin": "20.1.4",
@@ -34,26 +33,40 @@
     "@nx/js": "20.1.4",
     "@nx/web": "20.1.4",
     "@nx/workspace": "20.1.4",
-    "@schematics/angular": "~18.2.0",
-    "@swc-node/register": "~1.9.1",
-    "@swc/core": "~1.5.7",
-    "@swc/helpers": "~0.5.11",
+    "@schematics/angular": "^19.0.2",
+    "@swc-node/register": "^1.10.9",
+    "@swc/core": "~1.9.3",
+    "@swc/helpers": "~0.5.15",
     "@types/express": "4.17.14",
-    "@types/jest": "^29.5.12",
-    "@types/node": "18.16.9",
-    "@typescript-eslint/utils": "^8.0.0",
-    "angular-eslint": "^18.3.0",
-    "eslint": "^9.8.0",
-    "eslint-config-prettier": "^9.0.0",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.10.1",
+    "@typescript-eslint/utils": "^8.16.0",
+    "angular-eslint": "^18.4.2",
+    "eslint": "^9.15.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "express": "~4.21.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "jest-preset-angular": "~14.1.0",
+    "jest-preset-angular": "~14.4.1",
     "nx": "20.1.4",
-    "prettier": "^2.6.2",
-    "ts-jest": "^29.1.0",
-    "ts-node": "10.9.1",
-    "tslib": "^2.3.0",
+    "prettier": "^3.4.1",
+    "rxjs": "~7.8.1",
+    "ts-jest": "^29.2.5",
+    "ts-node": "10.9.2",
+    "tslib": "^2.8.1",
     "typescript": "~5.5.2",
-    "typescript-eslint": "^8.0.0"
-  }
+    "typescript-eslint": "^8.16.0",
+    "zone.js": "~0.14.10"
+  },
+  "engines": {
+    "yarn": ">=4.0.0",
+    "node": ">=20.0.0",
+    "npm": "Please use Yarn instead of NPM to install dependencies. See: https://yarnpkg.com/getting-started/install/"
+  },
+  "resolutions": {
+    "rxjs": "~7.8.1"
+  },
+  "packageManager": "yarn@4.5.3"
 }
