--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "url": "https://fafn.ru"
   },
   "private": true,
+  "scripts": {
+    "start": "nx serve taro/web"
+  },
   "devDependencies": {
     "@angular-devkit/build-angular": "19.0.2",
     "@angular-devkit/core": "19.0.2",
