--- a/package.json
+++ b/package.json
@@ -29,22 +29,35 @@
     "@angular/router": "19.0.1",
     "@angular/ssr": "19.0.2",
     "@eslint/js": "^9.15.0",
+    "@nestjs/common": "^10.4.11",
+    "@nestjs/config": "^3.3.0",
+    "@nestjs/core": "^10.4.11",
+    "@nestjs/platform-express": "^10.4.11",
+    "@nestjs/schematics": "^10.2.3",
+    "@nestjs/testing": "^10.4.11",
+    "@nestjs/typeorm": "^10.0.2",
     "@nx/angular": "20.1.4",
     "@nx/eslint": "20.1.4",
     "@nx/eslint-plugin": "20.1.4",
     "@nx/jest": "20.1.4",
     "@nx/js": "20.1.4",
+    "@nx/nest": "20.1.4",
+    "@nx/node": "20.1.4",
     "@nx/web": "20.1.4",
+    "@nx/webpack": "20.1.4",
     "@nx/workspace": "20.1.4",
     "@schematics/angular": "^19.0.2",
     "@swc-node/register": "^1.10.9",
     "@swc/core": "~1.9.3",
     "@swc/helpers": "~0.5.15",
+    "@types/cookie-parser": "^1.4.8",
     "@types/express": "4.17.14",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.1",
     "@typescript-eslint/utils": "^8.16.0",
     "angular-eslint": "^18.4.2",
+    "cookie-parser": "^1.4.7",
+    "dotenv": "^16.4.5",
     "eslint": "^9.15.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.31.0",
@@ -52,15 +65,19 @@
     "express": "~4.21.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
     "jest-preset-angular": "~14.4.1",
+    "mysql": "^2.18.1",
     "nx": "20.1.4",
     "prettier": "^3.4.1",
     "rxjs": "~7.8.1",
     "ts-jest": "^29.2.5",
     "ts-node": "10.9.2",
     "tslib": "^2.8.1",
+    "typeorm": "^0.3.20",
     "typescript": "~5.5.2",
     "typescript-eslint": "^8.16.0",
+    "webpack-cli": "^5.1.4",
     "zone.js": "~0.14.10"
   },
   "engines": {
@@ -71,5 +88,9 @@
   "resolutions": {
     "rxjs": "~7.8.1"
   },
-  "packageManager": "yarn@4.5.3"
+  "packageManager": "yarn@4.5.3",
+  "dependencies": {
+    "axios": "^1.6.0",
+    "reflect-metadata": "^0.1.13"
+  }
 }
