--- a/apps/backend/project.json
+++ b/apps/backend/project.json
@@ -1,5 +1,5 @@
 {
-  "name": "taro/backend",
+  "name": "backend",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/backend/src",
   "projectType": "application",
