[backend] Moving web x1

--- a/package.json
+++ b/package.json
@@ -9,7 +9,24 @@
   },
   "private": true,
   "scripts": {
-    "start": "nx serve taro/web"
+    "---- WEB ----": "",
+    "start:web": "nx serve web",
+    "build": "nx build web",
+    "ssr": "node dist/apps/web/server/ru/server.mjs",
+    "extract-i18n": "nx extract-i18n web --out-file=apps/web/src/i18n/source.xlf",
+    "---- BACKEND ----": "",
+    "start:backend": "yarn nx serve backend",
+    "build:backend": "yarn nx build backend",
+    "serve:backend": "node dist/apps/backend/main",
+    "start:db": "docker-compose -f ./apps/backend/docker-compose.yml up -d",
+    "stop:db": "docker-compose -f ./apps/backend/docker-compose.yml stop",
+    "typeorm": "ts-node -P apps/backend/tsconfig.app.json  -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "migration:run": "yarn typeorm migration:run -d apps/backend/src/app/config/ormconfig.ts",
+    "migration:revert": "yarn typeorm migration:revert -d apps/backend/src/app/config/ormconfig.ts",
+    "migration:create": "yarn typeorm migration:create $0",
+    "---- UTILS ----": "",
+    "reset": "nx reset",
+    "release": "ts-node ./scripts/release.ts"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "19.0.2",
@@ -36,26 +53,27 @@
     "@nestjs/schematics": "^10.2.3",
     "@nestjs/testing": "^10.4.11",
     "@nestjs/typeorm": "^10.0.2",
-    "@nx/angular": "20.1.4",
-    "@nx/eslint": "20.1.4",
-    "@nx/eslint-plugin": "20.1.4",
-    "@nx/jest": "20.1.4",
-    "@nx/js": "20.1.4",
-    "@nx/nest": "20.1.4",
-    "@nx/node": "20.1.4",
-    "@nx/web": "20.1.4",
-    "@nx/webpack": "20.1.4",
-    "@nx/workspace": "20.1.4",
+    "@nx/angular": "20.2.0-beta.3",
+    "@nx/eslint": "20.2.0-beta.3",
+    "@nx/eslint-plugin": "20.2.0-beta.3",
+    "@nx/jest": "20.2.0-beta.3",
+    "@nx/js": "20.2.0-beta.3",
+    "@nx/nest": "20.2.0-beta.3",
+    "@nx/node": "20.2.0-beta.3",
+    "@nx/web": "20.2.0-beta.3",
+    "@nx/webpack": "20.2.0-beta.3",
+    "@nx/workspace": "20.2.0-beta.3",
     "@schematics/angular": "^19.0.2",
-    "@swc-node/register": "^1.10.9",
-    "@swc/core": "~1.9.3",
-    "@swc/helpers": "~0.5.15",
+    "@swc-node/register": "~1.9.1",
+    "@swc/core": "~1.5.7",
+    "@swc/helpers": "~0.5.11",
     "@types/cookie-parser": "^1.4.8",
     "@types/express": "4.17.14",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.10.1",
+    "@types/node": "~18.16.9",
     "@typescript-eslint/utils": "^8.16.0",
-    "angular-eslint": "^18.4.2",
+    "angular-eslint": "^19.0.0-alpha.4",
+    "axios": "^1.7.8",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.5",
     "eslint": "^9.15.0",
@@ -68,8 +86,9 @@
     "jest-environment-node": "^29.7.0",
     "jest-preset-angular": "~14.4.1",
     "mysql": "^2.18.1",
-    "nx": "20.1.4",
+    "nx": "20.2.0-beta.3",
     "prettier": "^3.4.1",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.1",
     "ts-jest": "^29.2.5",
     "ts-node": "10.9.2",
@@ -77,8 +96,9 @@
     "typeorm": "^0.3.20",
     "typescript": "~5.5.2",
     "typescript-eslint": "^8.16.0",
+    "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4",
-    "zone.js": "~0.14.10"
+    "zone.js": "~0.15.0"
   },
   "engines": {
     "yarn": ">=4.0.0",
@@ -88,9 +108,5 @@
   "resolutions": {
     "rxjs": "~7.8.1"
   },
-  "packageManager": "yarn@4.5.3",
-  "dependencies": {
-    "axios": "^1.6.0",
-    "reflect-metadata": "^0.1.13"
-  }
+  "packageManager": "yarn@4.5.3"
 }
