--- a/apps/web/project.json
+++ b/apps/web/project.json
@@ -58,10 +58,10 @@
       "executor": "@angular-devkit/build-angular:dev-server",
       "configurations": {
         "production": {
-          "buildTarget": "taro/web:build:production"
+          "buildTarget": "web:build:production"
         },
         "development": {
-          "buildTarget": "taro/web:build:development"
+          "buildTarget": "web:build:development"
         }
       },
       "defaultConfiguration": "development"
@@ -69,7 +69,7 @@
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
       "options": {
-        "buildTarget": "taro/web:build"
+        "buildTarget": "web:build"
       }
     },
     "lint": {
@@ -85,7 +85,7 @@
     "serve-static": {
       "executor": "@nx/web:file-server",
       "options": {
-        "buildTarget": "taro/web:build",
+        "buildTarget": "web:build",
         "staticFilePath": "dist/apps/web/browser",
         "spa": true
       }
