--- a/libs/backend/users/project.json
+++ b/libs/backend/users/project.json
@@ -1,8 +1,7 @@
 {
-  "name": "users/common",
+  "name": "backend/users",
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/users/common/src",
-  "prefix": "lib",
+  "sourceRoot": "libs/backend/users/src",
   "projectType": "library",
   "tags": [],
   "targets": {
@@ -10,11 +9,8 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/users/common/jest.config.ts"
+        "jestConfig": "libs/backend/users/jest.config.ts"
       }
-    },
-    "lint": {
-      "executor": "@nx/eslint:lint"
     }
   }
 }
