--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@nestjs/common": "^10.4.11",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.4.11",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.4.11",
     "@nestjs/schematics": "^10.2.3",
     "@nestjs/testing": "^10.4.11",
@@ -71,6 +72,7 @@
     "@types/express": "4.17.14",
     "@types/jest": "^29.5.14",
     "@types/node": "~18.16.9",
+    "@types/passport-jwt": "^4.0.1",
     "@typescript-eslint/utils": "^8.16.0",
     "angular-eslint": "^19.0.0-alpha.4",
     "axios": "^1.7.8",
@@ -87,6 +89,8 @@
     "jest-preset-angular": "~14.4.1",
     "mysql": "^2.18.1",
     "nx": "20.2.0-beta.3",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "prettier": "^3.4.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.1",
