--- a/package.json
+++ b/package.json
@@ -46,9 +46,11 @@
     "@angular/router": "19.0.1",
     "@angular/ssr": "19.0.2",
     "@eslint/js": "^9.15.0",
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "^10.4.11",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.4.11",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.4.11",
     "@nestjs/schematics": "^10.2.3",
@@ -76,6 +78,7 @@
     "@typescript-eslint/utils": "^8.16.0",
     "angular-eslint": "^19.0.0-alpha.4",
     "axios": "^1.7.8",
+    "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.5",
     "eslint": "^9.15.0",
