--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@taro/auth/common": ["libs/auth/common/src/index.ts"],
       "@taro/backend/auth": ["libs/backend/auth/src/index.ts"],
       "@taro/backend/core": ["libs/backend/core/src/index.ts"],
       "@taro/backend/jwt": ["libs/backend/jwt/src/index.ts"],
