[backend][auth] Adding logic auth

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -6,3 +6,7 @@ DATABASE_USER=taro
 DATABASE_PASSWORD=123456
 DATABASE_SYNCHRONIZE=true
 DATABASE_AUTO_LOAD_ENTITIES=true
+JWT_SECRET=JWTStrongSecret
+JWT_EXPIRES_IN=60m
+MAIL_TRANSPORT=smtps://no-reply@fafn.ru:pass@smtp.mail.ru
+MAIL_FROM=no-reply@fafn.ru
