--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@typescript-eslint/utils": "^8.16.0",
     "angular-eslint": "^19.0.0-alpha.4",
     "axios": "^1.7.8",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.5",
