--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@types/passport-jwt": "^4.0.1",
     "@typescript-eslint/utils": "^8.16.0",
     "angular-eslint": "^19.0.0-alpha.4",
+    "argon2": "^0.41.1",
     "axios": "^1.7.8",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
