--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,6 +19,7 @@
       "@taro/backend/auth": ["libs/backend/auth/src/index.ts"],
       "@taro/backend/core": ["libs/backend/core/src/index.ts"],
       "@taro/backend/jwt": ["libs/backend/jwt/src/index.ts"],
+      "@taro/backend/spread": ["libs/backend/spread/src/index.ts"],
       "@taro/backend/users": ["libs/backend/users/src/index.ts"],
       "@taro/users/common": ["libs/users/common/src/index.ts"]
     }
