[spreads] Generating spread common

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -21,6 +21,7 @@
       "@taro/backend/jwt": ["libs/backend/jwt/src/index.ts"],
       "@taro/backend/spread": ["libs/backend/spread/src/index.ts"],
       "@taro/backend/users": ["libs/backend/users/src/index.ts"],
+      "@taro/spreads/common": ["libs/spreads/common/src/index.ts"],
       "@taro/users/common": ["libs/users/common/src/index.ts"]
     }
   },
