--- a/package.json
+++ b/package.json
@@ -29,83 +29,83 @@
     "release": "ts-node ./scripts/release.ts"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "19.0.2",
-    "@angular-devkit/core": "19.0.2",
-    "@angular-devkit/schematics": "19.0.2",
-    "@angular/animations": "19.0.1",
-    "@angular/cli": "19.0.2",
-    "@angular/common": "19.0.1",
-    "@angular/compiler": "19.0.1",
-    "@angular/compiler-cli": "19.0.1",
-    "@angular/core": "19.0.1",
-    "@angular/forms": "19.0.1",
-    "@angular/language-service": "19.0.1",
-    "@angular/platform-browser": "19.0.1",
-    "@angular/platform-browser-dynamic": "19.0.1",
-    "@angular/platform-server": "19.0.1",
-    "@angular/router": "19.0.1",
-    "@angular/ssr": "19.0.2",
-    "@eslint/js": "^9.15.0",
+    "@angular-devkit/build-angular": "19.0.5",
+    "@angular-devkit/core": "19.0.5",
+    "@angular-devkit/schematics": "19.0.5",
+    "@angular/animations": "19.0.4",
+    "@angular/cli": "~19.0.5",
+    "@angular/common": "19.0.4",
+    "@angular/compiler": "19.0.4",
+    "@angular/compiler-cli": "19.0.4",
+    "@angular/core": "19.0.4",
+    "@angular/forms": "19.0.4",
+    "@angular/language-service": "19.0.4",
+    "@angular/platform-browser": "19.0.4",
+    "@angular/platform-browser-dynamic": "19.0.4",
+    "@angular/platform-server": "19.0.4",
+    "@angular/router": "19.0.4",
+    "@angular/ssr": "19.0.5",
+    "@eslint/js": "^9.17.0",
     "@nestjs-modules/mailer": "^2.0.2",
-    "@nestjs/common": "^10.4.11",
+    "@nestjs/common": "^10.4.15",
     "@nestjs/config": "^3.3.0",
-    "@nestjs/core": "^10.4.11",
+    "@nestjs/core": "^10.4.15",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.4.11",
+    "@nestjs/platform-express": "^10.4.15",
     "@nestjs/schematics": "^10.2.3",
-    "@nestjs/testing": "^10.4.11",
+    "@nestjs/testing": "^10.4.15",
     "@nestjs/typeorm": "^10.0.2",
-    "@nx/angular": "20.2.0-beta.3",
-    "@nx/eslint": "20.2.0-beta.3",
-    "@nx/eslint-plugin": "20.2.0-beta.3",
-    "@nx/jest": "20.2.0-beta.3",
-    "@nx/js": "20.2.0-beta.3",
-    "@nx/nest": "20.2.0-beta.3",
-    "@nx/node": "20.2.0-beta.3",
-    "@nx/web": "20.2.0-beta.3",
-    "@nx/webpack": "20.2.0-beta.3",
-    "@nx/workspace": "20.2.0-beta.3",
-    "@schematics/angular": "^19.0.2",
-    "@swc-node/register": "~1.9.1",
-    "@swc/core": "~1.5.7",
-    "@swc/helpers": "~0.5.11",
+    "@nx/angular": "20.2.2",
+    "@nx/eslint": "20.2.2",
+    "@nx/eslint-plugin": "20.2.2",
+    "@nx/jest": "20.2.2",
+    "@nx/js": "20.2.2",
+    "@nx/nest": "20.2.2",
+    "@nx/node": "20.2.2",
+    "@nx/web": "20.2.2",
+    "@nx/webpack": "20.2.2",
+    "@nx/workspace": "20.2.2",
+    "@schematics/angular": "^19.0.5",
+    "@swc-node/register": "~1.10.9",
+    "@swc/core": "~1.10.1",
+    "@swc/helpers": "~0.5.15",
     "@types/cookie-parser": "^1.4.8",
-    "@types/express": "4.17.14",
+    "@types/express": "5.0.0",
     "@types/jest": "^29.5.14",
-    "@types/node": "~18.16.9",
+    "@types/node": "~22.10.2",
     "@types/passport-jwt": "^4.0.1",
-    "@typescript-eslint/utils": "^8.16.0",
-    "angular-eslint": "^19.0.0-alpha.4",
+    "@typescript-eslint/utils": "^8.18.0",
+    "angular-eslint": "19.0.2",
     "argon2": "^0.41.1",
-    "axios": "^1.7.8",
+    "axios": "^1.7.9",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
-    "dotenv": "^16.4.5",
-    "eslint": "^9.15.0",
+    "dotenv": "^16.4.7",
+    "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "express": "~4.21.1",
+    "express": "~4.21.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
-    "jest-preset-angular": "~14.4.1",
+    "jest-preset-angular": "14.4.2",
     "mysql": "^2.18.1",
-    "nx": "20.2.0-beta.3",
+    "nx": "20.2.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
-    "prettier": "^3.4.1",
+    "prettier": "^3.4.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.1",
     "ts-jest": "^29.2.5",
     "ts-node": "10.9.2",
     "tslib": "^2.8.1",
     "typeorm": "^0.3.20",
-    "typescript": "~5.5.2",
-    "typescript-eslint": "^8.16.0",
-    "webpack": "^5.96.1",
+    "typescript": "5.6.3",
+    "typescript-eslint": "^8.18.0",
+    "webpack": "^5.97.1",
     "webpack-cli": "^5.1.4",
     "zone.js": "~0.15.0"
   },
