--- a/libs/cards/common/project.json
+++ b/libs/cards/common/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "spreads/common",
+  "name": "cards/common",
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/spreads/common/src",
+  "sourceRoot": "libs/cards/common/src",
   "prefix": "lib",
   "projectType": "library",
   "tags": [],
@@ -10,7 +10,7 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/spreads/common/jest.config.ts"
+        "jestConfig": "libs/cards/common/jest.config.ts"
       }
     },
     "lint": {
