[ui][layout] Generating ui layout

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -24,6 +24,7 @@
       "@taro/backend/users": ["libs/backend/users/src/index.ts"],
       "@taro/cards/common": ["libs/cards/common/src/index.ts"],
       "@taro/spreads/common": ["libs/spreads/common/src/index.ts"],
+      "@taro/ui/layout": ["libs/ui/layout/src/index.ts"],
       "@taro/users/common": ["libs/users/common/src/index.ts"]
     }
   },
