--- a/apps/web/project.json
+++ b/apps/web/project.json
@@ -16,6 +16,9 @@
         "polyfills": ["zone.js"],
         "tsConfig": "apps/web/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
+        "stylePreprocessorOptions": {
+          "includePaths": ["node_modules", "./"]
+        },
         "assets": [
           {
             "glob": "**/*",
