[web][home] Generating home page

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -26,7 +26,8 @@
       "@taro/core": ["libs/core/src/index.ts"],
       "@taro/spreads/common": ["libs/spreads/common/src/index.ts"],
       "@taro/ui/layout": ["libs/ui/layout/src/index.ts"],
-      "@taro/users/common": ["libs/users/common/src/index.ts"]
+      "@taro/users/common": ["libs/users/common/src/index.ts"],
+      "@taro/web/home/page": ["libs/web/home/page/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
