--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,9 @@
     "baseUrl": ".",
     "paths": {
       "@taro/auth/common": ["libs/auth/common/src/index.ts"],
+      "@taro/auth/guards": ["libs/auth/guards/src/index.ts"],
+      "@taro/auth/services": ["libs/auth/services/src/index.ts"],
+      "@taro/auth/page": ["libs/auth/page/src/index.ts"],
       "@taro/backend/auth": ["libs/backend/auth/src/index.ts"],
       "@taro/backend/cards": ["libs/backend/cards/src/index.ts"],
       "@taro/backend/core": ["libs/backend/core/src/index.ts"],
@@ -28,6 +31,8 @@
       "@taro/spreads/common": ["libs/spreads/common/src/index.ts"],
       "@taro/ui/layout": ["libs/ui/layout/src/index.ts"],
       "@taro/users/common": ["libs/users/common/src/index.ts"],
+      "@taro/users/guards": ["libs/users/guards/src/index.ts"],
+      "@taro/users/services": ["libs/users/services/src/index.ts"],
       "@taro/web/home/page": ["libs/web/home/page/src/index.ts"]
     }
   },
