--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular-devkit/core": "19.0.5",
     "@angular-devkit/schematics": "19.0.5",
     "@angular/animations": "19.0.4",
+    "@angular/cdk": "^19.0.3",
     "@angular/cli": "~19.0.5",
     "@angular/common": "19.0.4",
     "@angular/compiler": "19.0.4",
